--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
   "tenacity>=8.2",
   "rich>=13.7",
   "pillow>=10.3",
+  "fastapi>=0.115",
+"uvicorn>=0.30",
 ]
 
 [tool.setuptools.packages.find]
