--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "pillow>=10.3",
   "fastapi>=0.115",
 "uvicorn>=0.30",
+"python-multipart = "^0.0.9"",
 ]
 
 [tool.setuptools.packages.find]
