--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,56 @@
 [build-system]
-requires = ["setuptools>=68", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "ai-translator"
 version = "0.1.0"
-description = "AI-powered OCR and translation system"
+description = "AI-powered PDF and text translator with OCR and FastAPI interface."
+authors = [
+    { name = "Luis Parra", email = "your_email@example.com" }
+]
 readme = "README.md"
 requires-python = ">=3.11"
+
+# ---- Dependencies ----
 dependencies = [
-  "python-dotenv>=1.0.1",
-  "requests>=2.31",
-  "tenacity>=8.2",
-  "rich>=13.7",
-  "pillow>=10.3",
-  "fastapi>=0.115",
-"uvicorn>=0.30",
-"python-multipart = "^0.0.9"",
+    "fastapi",
+    "uvicorn",
+    "pydantic",
+    "python-dotenv",
+    "requests",
+    "pillow",
+    "python-multipart",
+    "rich",
+    "tenacity",
+    "pytest",
+    "pytest-cov",
+    "black",
+    "ruff",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-cov",
+    "black",
+    "ruff",
 ]
 
 [tool.setuptools.packages.find]
 where = ["src/python"]
+include = ["ai_translator*"]
+
+[tool.black]
+line-length = 88
+target-version = ["py311"]
+
+[tool.ruff]
+line-length = 88
+fix = true
+select = ["E", "F", "I"]
+exclude = [".venv", "build", "dist"]
+
+[tool.pytest.ini_options]
+addopts = "--disable-warnings"
+testpaths = ["tests"]
